update for service and validate data